# rayovak

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile.dev  config.py  main.py
backend/correlation/api/: router.py
backend/health_data/api/: garmin.py  router.py
backend/health_data/domain/: garmin_auth.py
backend/health_data/services/: garmin_service.py
backend/video_analysis/: seed.py
backend/video_analysis/api/: router.py  sessions.py  upload.py
backend/video_analysis/domain/: scoring.py  session.py
backend/video_analysis/services/: session_service.py  video_analyzer.py
frontend/: Dockerfile.dev  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  garmin.ts  sessions.ts  upload.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  LiveMonitor.tsx  SessionDetail.tsx  SessionHistory.tsx  Settings.tsx  UploadAnalyze.tsx
frontend/src/video_analysis/: handTicDetector.ts  landmarkPipeline.ts  mouthTicDetector.ts
migrations/: 001_sessions.sql
tests/unit/: test_confirmation.py  test_garmin_auth.py  test_session_service.py
